@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v9r2p8
+  {
+    Modules = LHCbDIRAC:v9r2p8, LHCbWebDIRAC:v4r4p8
+    Depends = DIRAC:v6r20p16
+    LcgVer = v14r2
+  }
+
   v9r2p7
   {
     Modules = LHCbDIRAC:v9r2p7, LHCbWebDIRAC:v4r4p8
