@@ -1,3 +1,12 @@
+[v9r2p8]
+use DIRAC v6r20p16
+
+* correct code style
+* simplify the list checking
+* fix size per lumi
+* fix printout
+* register runs to the productionoutputfiles
+
 [v9r2p7]
 use DIRAC v6r20p14
 
